<resources>
    <string name="app_name">Cat Holic</string>
    <string name="success_to_posting">Upload Success!</string>
    <string name="fail_to_posting">Upload Fail! Please try again</string>
    <string name="need_to_sign_in">Please Sign In First</string>
    <string name="order_by">Sort By</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="guide">Guide</string>
    <string name="my_cat_photo">My Cat Photo</string>
    <string name="welcome_to_cat_holic">Welcome to Cat Holic !</string>
    <string name="please_sign_in_to_manage_your_cat_photos">Please sign in to share your cat photos.</string>
    <string name="post_these_photos">Post These Photos !</string>
    <string name="please_upload_photos_first">Please Upload Photos First</string>
    <string name="select_your_cat_photo">Select Your Cat Photo !</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="share_app_to_friends">Share App to Friends</string>
    <string name="gallery">GALLERY</string>
    <string name="like">LIKE</string>
    <string name="profile">PROFILE</string>
    <string name="delete">DELETE</string>
    <string name="download">DOWNLOAD</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="we_didn_t_find_any_cats_in_this_photo">"Didn't find any cats in this photo."</string>
    <string name="comment_your_emoji">Comment Your Emoji 😋</string>
    <string name="emoji_comment">EMOJI COMMENT</string>
    <string name="liked_users">LIKED USERS</string>
    <string name="app_version">App Version</string>
    <string name="your_like_list_is_empty_n_choose_photos_you_like_in_the_gallery">Your like list is empty 🥺\n👈 Choose photos you like in the gallery !</string>
    <string name="you_haven_t_uploaded_any_photos_yet_nupload_your_first_cat_photo">You haven\'t uploaded any photos yet 🐱\nUpload your first cat photo !</string>
    <string name="no_one_has_left_a_comment_yet_nwould_you_leave_the_first_comment">No one has left a comment yet.\nWould you leave the first comment?👇</string>
    <string name="you_are_not_following_anyone_yet_follow_uploaders_you_want">You are not following anyone yet 🐱\n Follow uploaders you want !</string>
    <string name="leave_your_emoji_comment">Leave your emoji comment !</string>
    <string name="postings">Postings</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="followed">✔️ followed</string>
    <string name="open_source_license">Open Source License</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="cat_holic">CAT HOLIC</string>
    <string name="upload_cat_photo">UPLOAD CAT PHOTO</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="network_fail">network fail😢</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="greetings_are_empty">Greetings are empty !</string>
    <string name="edit_nickname">Edit Nickname</string>
    <string name="edit_greetings">Edit Greetings</string>
    <string name="enter_your_nickname">enter your nickname !</string>
    <string name="something_went_wrong">Something went wrong !\nPlease try again.</string>
    <string name="photos">Photos</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="s_posting">"'s Posting"</string>
    <string name="new_follower">New Follower</string>
    <string name="new_posting_from_you_follow">New Posting</string>
    <string name="new_comment">New Comment</string>
    <string name="new_like">New Like</string>
    <string name="photo_download">Photo Download</string>
    <string name="fail_to_download_photo">Fail to download photo</string>
    <string name="success_to_download_photo">Success to download photo</string>
    <string name="start_to_download_photo">Start to download photo</string>
    <string name="downloading_cat_photo">Downloading cat photo ..</string>
    <string name="click_the_button_above_to_change_the_arrangement_of_cat_photos">Click the button above to change the arrangement of cat photos.</string>
    <string name="click_the_button_below_to_upload_your_cat_photos">Click the button below to upload your cat photos.</string>
    <string name="create_your_profile_simply_by_clicking_on_the_user_tab">Create your profile simply by clicking on the user tab!</string>
    <string name="i_got_it">I GOT IT !</string>
    <string name="click_here_to_select_your_cat_photos_that_you_would_like_to_upload">Click here to select your cat photos that you would like to upload.</string>
    <string name="click_here_to_delete_the_photo_you_were_trying_to_upload">Click here to delete the photo you were trying to upload.</string>
    <string name="click_here_to_retry_uploading_a_photo_that_failed_to_upload">Click here to retry uploading a photo that failed to upload.</string>
    <string name="if_you_try_to_upload_a_photo_that_is_not_a_cat_it_fails_as_shown_on_the_left_click_to_delete_the_photo">If you try to upload a photo that is not a cat, it fails as shown on the left. Click to delete the photo.</string>
    <string name="you_can_upload_up_to_10_photos_at_a_time">You can upload up to 10 photos at a time.</string>
    <string name="unfollow_2">Unfollow</string>
    <string name="do_you_really_want_to_unfollow">Do you really want to unfollow?</string>
    <string name="delete_posting">Delete Posting</string>
    <string name="do_you_really_want_to_delete_this_posting">Do you really want to delete this posting?</string>
    <string name="delete_2">Delete</string>
    <string name="press_back_again_to_exit">Press back key again to exit</string>
    <string name="emoji_comment_copied">Emoji Comment Copied!</string>
    <string name="emoji">EMOJI</string>
    <string name="crop_photo">Crop Photo</string>
    <string name="fail_to_get_photo">Fail to get photo</string>
    <string name="need_permission_to_download_photos">Need permission to download photos</string>
    <string name="photo_list_is_empty">Photo list is empty !</string>
    <string name="s_cat_photo">%s\'s Cat Photo</string>
    <string name="choose_an_app_to_share">Choose an app to share</string>
    <string name="I_really_want_to_show_you_this_cat">I really want to show you this cat!\n%s</string>
    <string name="cat_photo_sharing_sns">Cat Photo Sharing SNS</string>
    <string name="cat_photo_sharing_sns_s">Cat Photo Sharing SNS\n%s</string>
    <string name="share">SHARE</string>
    <string name="fail_to_sign_in">fail to sign in</string>
    <string name="s_just_posted_a_new_cat_photo">%s just posted a new cat photo !</string>
    <string name="s_just_liked_your_photo">%s just liked your photo !</string>
    <string name="s_just_commented_on_your_photo">%s just commented on your photo !</string>
    <string name="s_just_follow_you">%s just follow you !</string>
    <string name="to_check_it_right_away_touch_this_notification">To check it right away, touch this notification.</string>
    <string name="notification_history">Notification History</string>
    <string name="all">All</string>
    <string name="selection_full">Selection full. Deselect an image to choose another.</string>
    <string name="please_select_photos">Please select photos!</string>
    <string name="the_post_has_been_deleted">The post has been deleted</string>
    <string name="this_post_is_blocked_by_many_reports">This post is blocked by many reports.</string>
    <string name="your_account_has_been_blocked">Your account has been blocked.</string>
    <string name="service_maintenance">Service Maintenance</string>
    <string name="service_is_currently_in_maintenance">Service is currently in maintenance.\nPlease try again after a while.</string>
    <string name="do_you_really_want_to_stop_uploading">Do you really want to stop uploading?</string>
    <string name="stop_uploading">Stop Uploading</string>
    <string name="report_this_posting">REPORT THIS POSTING</string>
    <string name="hide">HIDE</string>
    <string name="thank_you_for_reporting">Thank you for reporting. We will take action after review.</string>
</resources>