<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="isVisibleGuide"
            type="Boolean" />

        <variable
            name="onClickCloseGuide"
            type="Function0&lt;Unit>" />

        <import type="kotlin.jvm.functions.Function0" />

        <import type="kotlin.Unit" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/half_transparent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="@{isVisibleGuide ? View.VISIBLE : View.GONE}">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:rotation="270"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/background_color_main" />

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/background_color_main"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:text="@string/click_the_button_above_to_change_the_arrangement_of_cat_photos"
                android:textColor="@color/text_color"
                android:textSize="15dp" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="135dp"
            android:rotation="90"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/background_color_main" />

        <androidx.cardview.widget.CardView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="160dp"
            app:cardBackgroundColor="@color/background_color_main"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:text="@string/click_the_button_below_to_upload_your_cat_photos"
                android:textColor="@color/text_color"
                android:textSize="15dp" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="55dp"
            android:rotation="40"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/background_color_main" />

        <androidx.cardview.widget.CardView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="70dp"
            app:cardBackgroundColor="@color/background_color_main"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:text="@string/create_your_profile_simply_by_clicking_on_the_user_tab"
                android:textColor="@color/text_color"
                android:textSize="15dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:onClick="@{() -> onClickCloseGuide.invoke()}"
            app:cardCornerRadius="15dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/i_got_it"
                android:textColor="@color/text_color"
                android:textSize="25dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>