<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="postingItem"
            type="com.woody.cat.holic.framework.paging.item.PostingItem" />

        <variable
            name="imageUrl"
            type="String" />

        <variable
            name="postingDetailViewModel"
            type="com.woody.cat.holic.presentation.main.posting.detail.PostingDetailViewModel" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:foreground="?android:selectableItemBackground"
            android:onClick="@{() -> postingDetailViewModel.onClickShare(postingItem.postingId, postingItem.user.displayName, postingDetailViewModel.currentSelectedImageUrl)}"
            app:cardBackgroundColor="@color/background_color_main"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_share"
                    app:tint="@color/text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:foreground="?android:selectableItemBackground"
            android:onClick="@{() -> postingDetailViewModel.onClickDownload(postingDetailViewModel.currentSelectedImageUrl)}"
            app:cardBackgroundColor="@color/background_color_main"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_download"
                    app:tint="@color/text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:foreground="?android:selectableItemBackground"
            android:onClick="@{() -> postingDetailViewModel.onClickReportPosting(postingItem.postingId)}"
            app:cardBackgroundColor="@color/background_color_main"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_warning"
                    app:tint="@color/text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_this_posting"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:foreground="?android:selectableItemBackground"
            android:onClick="@{() -> postingDetailViewModel.onClickHideBottomSheet()}"
            app:cardBackgroundColor="@color/background_color_main"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>