<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.woody.cat.holic.presentation.main.user.myphoto.MyPhotoViewModel" />

        <import type="android.view.View" />

        <import type="com.woody.cat.holic.data.common.PostingOrder" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color_main"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_my_cat_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color_main"
            android:theme="@style/ToolbarTheme"
            app:contentInsetStartWithNavigation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_cat_photo"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginEnd="10dp"
                    android:foreground="?android:selectableItemBackground"
                    android:onClick="@{() -> viewModel.onClickChangePostingOrder()}"
                    android:padding="0dp"
                    app:cardBackgroundColor="@color/background_color_sub"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="12dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/order_by"
                            android:textColor="@color/background_color_main"
                            android:textSize="12dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:src="@{viewModel.currentVisiblePostingOrder == PostingOrder.CREATED ? @drawable/ic_clock_fill : @drawable/ic_heart_fill}"
                            app:tint="@color/background_color_main"
                            tools:src="@drawable/ic_heart_fill" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:onRefreshListener="@{() -> viewModel.initData()}"
                app:refreshing="@{viewModel.isLoading()}">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_my_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_main"
                    android:scrollbars="none"
                    android:visibility="@{viewModel.isListEmpty() ? View.GONE : View.VISIBLE}"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/item_my_photo_posting" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{viewModel.isListEmpty() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/woody_cat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="10dp"
                    android:text="@string/you_haven_t_uploaded_any_photos_yet_nupload_your_first_cat_photo"
                    android:textColor="@color/text_color"
                    android:textSize="16dp" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_main_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:onClick="@{() -> viewModel.onClickUploadFab()}"
                android:src="@drawable/ic_upload"
                app:backgroundTint="@color/background_color_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="@color/background_color_sub"
                app:tint="@color/background_color_sub" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>